--- a/config/database.yml
+++ b/config/database.yml
@@ -4,10 +4,9 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
-  pool: 5
-  timeout: 5000
+  adapter: postgresql
+  host: localhost
+  database: doitmrw
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -19,9 +18,9 @@ test:
   timeout: 5000
 
 production:
-  adapter: postgres
+  adapter: postgresql
   host: ec2-23-23-244-144.compute-1.amazonaws.com
   database: d6j70unj5s85u6
   user: jnkwfqqplmwvfn
   password: mHI0g7ut5Bjjpr0KkyHphBA0Gn
-  timeout: 5432
+  port: 5432
